# cpp-daw

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md
Source/: Main.cpp  MainWindow.cpp  MainWindow.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  ProcessorGraph.cpp  ProcessorGraph.h  Transport.cpp  Transport.h
Source/UI/: MainComponent.cpp  MainComponent.h
